--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         #hero {
             background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)),
-                        url('https://postfiles.pstatic.net/MjAyNTAxMjRfMTc4/MDAxNzM3NzI2MjY3NTQ3.q_ly7sFA9z8ER0t-qE_DHMnPcmhU4CuBQJLWdHClHRQg.ZAunabq07558LCEtzJynsIYAsgiCnto66fgWhYWqUz0g.JPEG/IMG_5993.jpg?type=w773') center/cover;
+                        url('/img/IMG_5993.jpg') center/cover;
             color: var(--white);
             text-align: center;
         }
