--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         #hero {
             background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)),
-                        url('/img/IMG_5993.jpg') center/cover;
+                        url('https://github.com/Pidori204/bakingclass/blob/main/img/IMG_5993.jpg?raw=true') center/cover;
             color: var(--white);
             text-align: center;
         }
