--- a/index.html
+++ b/index.html
@@ -389,42 +389,42 @@ text-align: center;
             <h2 class="title">What You'll Learn</h2>
             <div class="grid">
                 <div class="card">
-                    <img src="https://postfiles.pstatic.net/MjAyNTAxMjRfODAg/MDAxNzM3NzIyNTM4NDky.2aDq4SiKplz2yk_fZQin79e_kAIIwUMYmRESCZMeIhYg.PZ-dxanxTx84xuDzW7ampksKtjjzL0-EQLMjF9lroQog.JPEG/choco_muffin.jpg?type=w773" alt="Artisan Muffins" class="card-image">
+                    <img src="https://github.com/Pidori204/bakingclass/blob/main/img/choco_muffin.jpg?raw=true" alt="Artisan Muffins" class="card-image">
                     <div class="card-content">
                         <h3>Artisan Muffins</h3>
                         <p>Master the art of creating perfectly domed muffins with various flavors: classic blueberry, double chocolate chip, and banana walnut.</p>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="https://postfiles.pstatic.net/MjAyNTAxMjRfMjk0/MDAxNzM3NzIyNjIyMjMw.vPd7958fSpeZq0ctmMwjzkGAG6gFTxu01lL9jEV-8IEg.ecYhAUd1ZiD1g3VsfGxf7TCzHqgFaZQ4qkYnRjPcD3Yg.JPEG/st_tart.jpg?type=w773" alt="Gourmet Cookies" class="card-image">
+                    <img src="https://github.com/Pidori204/bakingclass/blob/main/img/st_tart.jpg?raw=true" alt="Gourmet Cookies" class="card-image">
                     <div class="card-content">
                         <h3>Strawberry Tart</h3>
                         <p>Discover the delicate balance of pastry making as you create a beautiful strawberry tart. Learn the secrets of making perfect sweet pastry dough, master the art of blind baking, and understand how temperature affects custard filling consistency. A perfect introduction to French patisserie techniques.</p>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="https://postfiles.pstatic.net/MjAyNTAxMjRfMjgw/MDAxNzM3NzIyNTM4NDcx.x0hKXmW738t85ZB2E4zU74UGabU-psPCyeUwLOrczDgg.icsOjVpnbumVsJYv3yc5SMVwyWyOOPVPdPR4Uv58ujQg.JPEG/scone.jpg?type=w773" alt="Classic Scones" class="card-image">
+                    <img src="https://github.com/Pidori204/bakingclass/blob/main/img/scone.jpg?raw=true" alt="Classic Scones" class="card-image">
                     <div class="card-content">
                         <h3>Classic Scones</h3>
                         <p>Discover authentic British scone recipes. Create buttery, flaky scones with various mix-ins like cranberries, chocolate, and herbs.</p>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="https://postfiles.pstatic.net/MjAyNTAxMjRfNSAg/MDAxNzM3NzIyNTM4NDU2.MWS2vKtFgX5SUiIPFjBGdETgCJsYL6U207XpXFu5OVMg.NRg1019hZUa0vXIH-D1zlzzsRG6RNk9geFjN8LIzVNUg.JPEG/salt-bread.jpg?type=w773" alt="Specialty Breads" class="card-image">
+                    <img src="https://github.com/Pidori204/bakingclass/blob/main/img/salt-bread.jpg?raw=true" alt="Specialty Breads" class="card-image">
                     <div class="card-content">
                         <h3>Salt Bread</h3>
                         <p>Learn professional techniques for creating artisanal breads, including our famous salt-crusted bread with a perfectly chewy interior.</p>
                     </div>
                 </div>
  <div class="card">
-                    <img src="https://postfiles.pstatic.net/MjAyNTAxMjRfOTgg/MDAxNzM3NzI2NjgzMDQz.pIts8xBVyatopVSs87LU3WTq6Ecrk7yNrxaRzdgoJhIg.MgkKdxajaCQelqzN5vBDNuaKoXMbZ8BaqjW2dHTQSQYg.JPEG/cookie.jpg?type=w773" alt="Specialty Breads" class="card-image">
+                    <img src="https://github.com/Pidori204/bakingclass/blob/main/img/cookie.jpg?raw=true" alt="Specialty Breads" class="card-image">
                     <div class="card-content">
                         <h3>Chocolate Chip Cookies</h3>
                         <p>Learn the science of cookie perfection: discover how different sugars affect chewiness, master the ideal butter temperature for perfect spreading, and understand the role of resting time in flavor development. </p>
                     </div>
                 </div>
  <div class="card">
-                    <img src="https://postfiles.pstatic.net/MjAyNTAxMjRfMTA1/MDAxNzM3NzI2NjgzMDYw.PYSnBKoGl8ccG4c1vlqILGQWGPBouCQa8MgNS922tvUg.fQ8mH533zu3D6axqcs33fncB6ll2aB6xrKST7-M0lzcg.JPEG/croffle.jpg?type=w773" alt="Specialty Breads" class="card-image">
+                    <img src="https://github.com/Pidori204/bakingclass/blob/main/img/croffle.jpg?raw=true" alt="Specialty Breads" class="card-image">
                     <div class="card-content">
                         <h3>Croffle</h3>
                         <p>Explore the art of lamination as you create this trendy hybrid pastry. Master the technique of folding butter into dough and learn how waffle iron temperature affects the final texture. A perfect blend of classic French pastry and Korean innovation.</p>
