--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                 </div>
                 <div class="contact-info">
                     <h3>Contact Information</h3>
-                    <p><i class="fas fa-phone"></i> Phone: [Your Contact Number]</p>
-                    <p><i class="fas fa-money-bill"></i> Zelle: [Your Zelle Info]</p>
+                    <p><i class="fas fa-phone"></i> e-mail: elena6coap@gmail.com</p>
+                    <p><i class="fas fa-money-bill"></i> Zelle: 945-400-2949 Elena Hong</p>
                     <button class="btn register-btn" onclick="showRegistrationModal()">Register Now</button>
                 </div>
             </div>
